--- a/AnimatedConverters.csproj
+++ b/AnimatedConverters.csproj
@@ -27,6 +27,11 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Nightbuild|AnyCPU' ">
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Nightbuild</OutputPath>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AnimatedConverterBase.cs" />
